replace sun.misc.BASE64Encoder with java.util.Base64.Encoder